--- a/pyproject.toml
+++ b/pyproject.toml
@@ -72,7 +72,7 @@ disallow_untyped_defs = false
 check_untyped_defs = true
 
 [[tool.mypy.overrides]]
-module = ["mlflow.*", "nnunetv2.*"]
+module = ["mlflow.*", "nnunetv2.*", "torch.*"]
 ignore_missing_imports = true
 
 [tool.pytest.ini_options]
